--- a/PP_Capstone.Rmd
+++ b/PP_Capstone.Rmd
@@ -34,16 +34,8 @@ This study will examine the causes of US power plant outages based on the follow
 * GT_Jet_Engine_2013_2016.csv - Simple Cycle Power Plants
 * Fossil_steam_2013_2017.csv - Fossil Fuel Fired Boiler Steam Power Plants
 
-In each data file, the cause is determined by the "cause code", column/variable 5.
+My goal is determine which types of equipment failures are most responsible for unplanned/forced outages for each of these three types of plants.  To do this, I will have to do further examine the field Cause_Code, using the metadata associated with each four character code and chunking it into higher level or less granular categories.
 
-It could be useful to examine outage duration in categories or bands.
-* 1 to 10 Days - Low Severity
-* 11 to 30 Days - Medium Severity
-* Greater than 30 Days - High Severity
-
-Cause Codes should be examined in each category for number of outages per cause, as well as total outage time per cause.
-
-With respect to graphing and plotting, a plot depicting which causes are most responsible (top 20?) in each category and mapping the relationship is the goal.
 
 With respect to outage type, "Type" / column 4, the following should be ignored as they are planned or maintenance outages and derates.
 * MO - Maintenance Outage
@@ -53,6 +45,7 @@ With respect to outage type, "Type" / column 4, the following should be ignored 
 * RS - Reserve Shutdown
 
 The first wrangling step is to clean the column names.
+```{r c_cycle_edit, s_cycle_edit, echo=FALSE}
 library(tidyverse)
 # clean column names for combined and simple cycle power plant data sets
 # fossil fuel steam already cleaned
@@ -88,47 +81,40 @@ names(s_cycle_edit) <- gsub(x = names(s_cycle_edit),
 
 #   create working combined cycle file
 write.csv(s_cycle_edit, file = "s_cycle_work.csv")
+```
 
+I wanted to create standard POSIX.ct date fields from the character fields in the data frames.
 
-#create a combined field for start date and start time, start_dt
-
+```{r ff_steam_work, c_cycle_work, s_cycle_work, echo=FALSE}
+#create a combined field for start date and start time, start_dt, and end date / end time, end_dt.
 ff_steam_work <- ff_steam_work %>%
   mutate(start_dt = paste(StartDate, StartTime, sep = " ", collapse = NULL)) %>%
   mutate(start_dt = mdy_hms(start_dt))
-
-c_cycle_work <- c_cycle_work %>%
-  mutate(start_dt = paste(StartDate, StartTime, sep = " ")) %>%
-  mutate(start_dt = mdy_hm(start_dt))
-
-s_cycle_work <- s_cycle_work %>%
-  mutate(start_dt = paste(StartDate, StartTime, sep = " ")) %>%
-  mutate(start_dt = mdy_hm(start_dt))
-
-#create a combined field for end date and end time, end_dt
 
 ff_steam_work <- ff_steam_work %>%
   mutate(end_dt = paste(End_Date, End_Time, sep = " ", collapse = NULL)) %>%
   mutate(end_dt = mdy_hms(end_dt))
 
 c_cycle_work <- c_cycle_work %>%
-  mutate(end_dt = paste(End_Date, End_Time, sep = " ")) %>%
-  mutate(end_dt = mdy_hm(end_dt))
-
-s_cycle_work <- s_cycle_work %>%
-  mutate(end_dt = paste(End_Date, End_Time, sep = " ")) %>%
-  mutate(end_dt = mdy_hm(end_dt))
-
-#create a field for outage duration, out_duration, measured in hours
-
-ff_steam_work <- ff_steam_work %>%
-  mutate(out_duration = ((end_dt - start_dt) / 60))
+  mutate(start_dt = paste(StartDate, StartTime, sep = " ")) %>%
+  mutate(start_dt = mdy_hm(start_dt))
 
 c_cycle_work <- c_cycle_work %>%
-  mutate(out_duration = ((end_dt - start_dt) / 60))
+  mutate(end_dt = paste(End_Date, End_Time, sep = " ")) %>%
+  mutate(end_dt = mdy_hm(end_dt))
 
 s_cycle_work <- s_cycle_work %>%
-  mutate(out_duration = ((end_dt - start_dt) / 60))
+  mutate(start_dt = paste(StartDate, StartTime, sep = " ")) %>%
+  mutate(start_dt = mdy_hm(start_dt))
 
+s_cycle_work <- s_cycle_work %>%
+  mutate(end_dt = paste(End_Date, End_Time, sep = " ")) %>%
+  mutate(end_dt = mdy_hm(end_dt))
+```
+
+I created new data frames with only the desired fields.
+
+```{r ff_steam_worka, c_cycle_worka, s_cycle_worka, echo=FALSE}
 #create a new data frame with specific fields in new order
 
 ff_steam_worka <- ff_steam_work %>%
@@ -145,9 +131,11 @@ s_cycle_worka <- s_cycle_work %>%
   select(Util_Unit, start_dt, Type, Cause_Code, end_dt,
          Time_To_Repair, TBF_Period_Hrs, IA_PH, 
          TBF_Service_Hrs, IA_SH, X_Derate)
+```
 
+I created data frames converting the Cause_Codes to character fields in the event I wanted to do a join with the NERC GADS appendix codes.
 
-
+```{r ff_steam_exp, c_cycle_exp, s_cycle_exp, echo=FALSE}
 #convert Cause_Code iteger field to 4 character string/character field
 ff_steam_exp <- ff_steam_worka
 
@@ -159,7 +147,6 @@ ff_steam_exp <- ff_steam_exp %>%
 
 write.csv(ff_steam_exp, file = "ff_steam_expt.csv")
 
-
 c_cycle_exp <- c_cycle_worka
 
 c_cycle_exp <- c_cycle_exp %>%
@@ -170,7 +157,6 @@ c_cycle_exp <- c_cycle_exp %>%
 
 write.csv(c_cycle_exp, file = "c_cycle_expt.csv")
 
-
 s_cycle_expx <- s_cycle_worka
 
 s_cycle_exp <- s_cycle_expx %>%
@@ -178,6 +164,112 @@ s_cycle_exp <- s_cycle_expx %>%
   mutate(Cause_Code = if_else(nchar(Cause_Code) == 2, paste0("00", Cause_Code),
                               if_else(nchar(Cause_Code) == 3, paste0("0", Cause_Code),
                                       if_else(nchar(Cause_Code) == 1, paste0("000", Cause_Code), Cause_Code))))
-
 write.csv(s_cycle_exp, file = "s_cycle_expt.csv")
+```
+
+Since I am focusing on unplanned outages, I used the following to filter each data set (fossil fuel steam shown as an example) to include only unplanned derates: D1, D2, D3, start up failures: SF, and unplanned full outages: U1, U2, U3.
+
+```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
+# Filter for only forced, not planned or reserve shutdowns, outages and derates
+type_filter <- c("D1", "D2", "D3", "D4", "SF", "U1", "U2", "U3")
+ff_steam_df <- ff_steam_df %>%
+  filter(ff_steam_df$Type %in% type_filter)
+
+cc_df <- cc_df %>%
+  filter(cc_df$Type %in% type_filter)
+
+ss_df <- ss_df %>%
+  filter(ss_df$Type %in% type_filter)
+```
+
+I calculated the mean by Type  per below.  It’s not surprising that U1 has the highest mean as a U1 is an outage for which the generating unit must be shut down immediately
+
+```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
+# Calculate mean Time_To_Repair for each outage Type
+ff_steam_df %>% group_by(Type) %>%
+  summarise(Mean_TTR_Type_ff = mean(Time_To_Repair, na.rm = TRUE)) %>%
+  arrange(desc(Mean_TTR_Type_ff))
+
+cc_df %>% group_by(Type) %>%
+  summarise(Mean_TTR_Type_cc = mean(Time_To_Repair, na.rm = TRUE)) %>%
+  arrange(desc(Mean_TTR_Type_cc))
+
+ss_df %>% group_by(Type) %>%
+  summarise(Mean_TTR_Type_ss = mean(Time_To_Repair, na.rm = TRUE)) %>%
+  arrange(desc(Mean_TTR_Type_ss))
+```
+          
+I created box-plot graphs by type, in which the x axis was outage type, Type, and the y axis was time to repair, Time_To_Repair, for each data frame.  I also created stat summary graphs, x axis was year, y axis was type, and faceted by outage type.  Both show distributions with long right tails and high range outliers.
+
+```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
+plot(ff_box_Ty_TTR)
+Plot(ff_stat_sum)
+
+plot(cc_box_Ty_TTR)
+plot(cc_stat_sum)
+
+plot(ss_box_Ty_TTR)
+plot(cc_stat_sum)
+```
+Given that there are hudreds of cause codes, Cause_Code, for each type of power plant, I grouped them by plant system, System, base on the NERC GADS appendix files.
+
+```{r ff_steam_dfb, cc_dfb, ss_dfb, echo=FALSE}
+library(tidyverse)
+library(lubridate)
+
+ff_steam_dfb <- ff_steam_df
+
+#Convert Cause_Code to numeric
+#Create a new variable, System, that categorizes Cause_Code according to NERC GADS Appendix
+ff_steam_dfb <- ff_steam_dfb %>%
+  mutate(Cause_Code = as.numeric(Cause_Code)) %>%
+  mutate(System = 
+            if_else(Cause_Code>=10 & Cause_Code<=1999, "Boiler",
+            if_else((Cause_Code>=3110 & Cause_Code<=3549 | Cause_Code>=3800 & Cause_Code<=3999), "Balance_of_Plant",
+            if_else(Cause_Code>=3600 & Cause_Code<=3730, "Electrical",
+            if_else(Cause_Code>=4000 & Cause_Code<=4499, "Steam_Turbine",
+            if_else(Cause_Code>=4500 & Cause_Code<=5298, "Generator",
+            if_else(Cause_Code>=8000 & Cause_Code<=8845, "PCE",
+            if_else((Cause_Code>=9000 & Cause_Code<=9340 | Cause_Code==0), "External",
+            if_else(Cause_Code>=9504 & Cause_Code<=9720, "Regulatory",
+            if_else(Cause_Code>=9900 & Cause_Code<=9960, "Personnel",
+            if_else((Cause_Code==2 | Cause_Code>=9990 & Cause_Code<=9991), "Inactive", "Performance")))))))))))
+
+cc_dfb <- cc_df
+cc_dfb <- cc_dfb %>% 
+  mutate(Cause_Code = as.numeric(Cause_Code)) %>% 
+  mutate(System = 
+           if_else((Cause_Code>=111 & Cause_Code<=1999 | Cause_Code>=6000 & Cause_Code<=6183), "HRSG",
+           if_else((Cause_Code>=3110 & Cause_Code<=3549 | Cause_Code>=3800 & Cause_Code<=3899 | Cause_Code>=3950 & Cause_Code<=3999 | Cause_Code==6299 | Cause_Code==6399), "Balance_of_Plant",
+           if_else(Cause_Code>=3600 & Cause_Code<=3730, "Electrical",
+           if_else(Cause_Code>=4000 & Cause_Code<=4499, "Steam_Turbine",
+           if_else(Cause_Code>=4500 & Cause_Code<=4750, "Generator",
+           if_else(Cause_Code>=5000 & Cause_Code<=5299, "Gas_Turbine",
+           if_else(Cause_Code>=5400 & Cause_Code<=5699, "Jet_Engine",
+           if_else(Cause_Code==6200, "Miscellaneous",
+           if_else(Cause_Code>=7800 & Cause_Code<=7960, "Expander_Turbine",
+           if_else(Cause_Code>=8700 & Cause_Code<=8845, "PCE",
+           if_else((Cause_Code>=9000 & Cause_Code<=9340 | Cause_Code==0), "External",
+           if_else(Cause_Code>=9504 & Cause_Code<=9720, "Regulatory",
+           if_else(Cause_Code>=9900 & Cause_Code<=9960, "Personnel",
+           if_else((Cause_Code>=9990 & Cause_Code<=9991 | Cause_Code==2), "Inactive", "Performance")))))))))))))))
+
+ss_dfb <- ss_df
+ss_dfb <- ss_dfb %>% 
+  mutate(Cause_Code = as.numeric(Cause_Code)) %>% 
+  mutate(System =
+           if_else(Cause_Code>=3600 & Cause_Code<=3730, "Electrical",
+           if_else(Cause_Code>=3810 & Cause_Code<=3999, "Balance_of_Plant",
+           if_else(Cause_Code>=4500 & Cause_Code<=4899, "Generator",
+           if_else(Cause_Code>=5000 & Cause_Code<=5299, "Gas_Turbine",
+           if_else(Cause_Code>=7800 & Cause_Code<=7960, "Expander_Turbine",
+           if_else(Cause_Code>=8656 & Cause_Code<=8845, "PCE",
+           if_else((Cause_Code>=9000 & Cause_Code<=9340 | Cause_Code==0), "External",
+           if_else(Cause_Code>=9504 & Cause_Code<=9720, "Regulatory",
+           if_else(Cause_Code>=9900 & Cause_Code<=9960, "Personnel",
+           if_else((Cause_Code>=9990 & Cause_Code<=9991 | Cause_Code==2), "Inactive",
+           if_else(Cause_Code>=9997 & Cause_Code<=9999, "Performance", "Unknown"))))))))))))
+```
+My next step is to create dummy numeric variables for each System type. This should allow me to begin using additional statistical methods.
+
 
