--- a/PP_Capstone.Rmd
+++ b/PP_Capstone.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "PP_Capstone_Proposal"
-output: html_document
+Author: "Stephen Patti"
+Date:   "2018-08-13"
+output:
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
@@ -85,8 +89,11 @@ write.csv(s_cycle_edit, file = "s_cycle_work.csv")
 
 I wanted to create standard POSIX.ct date fields from the character fields in the data frames.
 
+
 ```{r ff_steam_work, c_cycle_work, s_cycle_work, echo=FALSE}
-#create a combined field for start date and start time, start_dt, and end date / end time, end_dt.
+#create a combined field for start date and start time, start_dt,
+#and end date / end time, end_dt.
+
 ff_steam_work <- ff_steam_work %>%
   mutate(start_dt = paste(StartDate, StartTime, sep = " ", collapse = NULL)) %>%
   mutate(start_dt = mdy_hms(start_dt))
@@ -136,7 +143,9 @@ s_cycle_worka <- s_cycle_work %>%
 I created data frames converting the Cause_Codes to character fields in the event I wanted to do a join with the NERC GADS appendix codes.
 
 ```{r ff_steam_exp, c_cycle_exp, s_cycle_exp, echo=FALSE}
+
 #convert Cause_Code iteger field to 4 character string/character field
+
 ff_steam_exp <- ff_steam_worka
 
 ff_steam_exp <- ff_steam_exp %>%
@@ -170,7 +179,12 @@ write.csv(s_cycle_exp, file = "s_cycle_expt.csv")
 Since I am focusing on unplanned outages, I used the following to filter each data set (fossil fuel steam shown as an example) to include only unplanned derates: D1, D2, D3, start up failures: SF, and unplanned full outages: U1, U2, U3.
 
 ```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
+
+library(tidyverse)
+library(lubridate)
+
 # Filter for only forced, not planned or reserve shutdowns, outages and derates
+
 type_filter <- c("D1", "D2", "D3", "D4", "SF", "U1", "U2", "U3")
 ff_steam_df <- ff_steam_df %>%
   filter(ff_steam_df$Type %in% type_filter)
@@ -179,12 +193,11 @@ cc_df <- cc_df %>%
   filter(cc_df$Type %in% type_filter)
 
 ss_df <- ss_df %>%
-  filter(ss_df$Type %in% type_filter)
-```
 
-I calculated the mean by Type  per below.  It’s not surprising that U1 has the highest mean as a U1 is an outage for which the generating unit must be shut down immediately
+#I also calculated the mean by Type using these data frames per below.  It’s not
+#surprising that U1 has the highest mean as a U1 is an outage for which the
+#generating unit must be shut down immediately 
 
-```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
 # Calculate mean Time_To_Repair for each outage Type
 ff_steam_df %>% group_by(Type) %>%
   summarise(Mean_TTR_Type_ff = mean(Time_To_Repair, na.rm = TRUE)) %>%
@@ -197,11 +210,13 @@ cc_df %>% group_by(Type) %>%
 ss_df %>% group_by(Type) %>%
   summarise(Mean_TTR_Type_ss = mean(Time_To_Repair, na.rm = TRUE)) %>%
   arrange(desc(Mean_TTR_Type_ss))
-```
-          
-I created box-plot graphs by type, in which the x axis was outage type, Type, and the y axis was time to repair, Time_To_Repair, for each data frame.  I also created stat summary graphs, x axis was year, y axis was type, and faceted by outage type.  Both show distributions with long right tails and high range outliers.
 
-```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
+         
+#I created box-plot graphs by type, in which the x axis was outage type, Type, and
+#the y axis was time to repair, Time_To_Repair, for each data frame.  I also created
+#stat summary graphs, x axis was year, y axis was type, and faceted by outage type.
+#Both show distributions with long right tails and high range outliers.
+
 plot(ff_box_Ty_TTR)
 Plot(ff_stat_sum)
 
@@ -211,6 +226,7 @@ plot(cc_stat_sum)
 plot(ss_box_Ty_TTR)
 plot(cc_stat_sum)
 ```
+
 Given that there are hudreds of cause codes, Cause_Code, for each type of power plant, I grouped them by plant system, System, base on the NERC GADS appendix files.
 
 ```{r ff_steam_dfb, cc_dfb, ss_dfb, echo=FALSE}
@@ -220,7 +236,8 @@ library(lubridate)
 ff_steam_dfb <- ff_steam_df
 
 #Convert Cause_Code to numeric
-#Create a new variable, System, that categorizes Cause_Code according to NERC GADS Appendix
+#Create a new variable, System, that categorizes Cause_Code according to NERC GADS
+#Appendix
 ff_steam_dfb <- ff_steam_dfb %>%
   mutate(Cause_Code = as.numeric(Cause_Code)) %>%
   mutate(System = 
