Update markdown files

--- a/PP_Capstone.Rmd
+++ b/PP_Capstone.Rmd
@@ -11,26 +11,6 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-
 ### Examining the causes of Power Plant Outages with respect to Frequency, nmber of outages, and Severity, duration of outages.
 
 This study will examine the causes of US power plant outages based on the following data from the North American Electrical Reliability Corporation (NERC) Generating Availability Data System (GADS).
@@ -217,14 +197,14 @@ ss_df %>% group_by(Type) %>%
 #stat summary graphs, x axis was year, y axis was type, and faceted by outage type.
 #Both show distributions with long right tails and high range outliers.
 
-plot(ff_box_Ty_TTR)
-Plot(ff_stat_sum)
+ff_box_Ty_TTR
+ff_stat_sum
 
-plot(cc_box_Ty_TTR)
-plot(cc_stat_sum)
+cc_box_Ty_TTR
+cc_stat_sum
 
-plot(ss_box_Ty_TTR)
-plot(cc_stat_sum)
+ss_box_Ty_TTR
+cc_stat_sum
 ```
 
 Given that there are hudreds of cause codes, Cause_Code, for each type of power plant, I grouped them by plant system, System, base on the NERC GADS appendix files.
