new and updated files

--- a/PP_Capstone.Rmd
+++ b/PP_Capstone.Rmd
@@ -268,5 +268,139 @@ ss_dfb <- ss_dfb %>%
            if_else(Cause_Code>=9997 & Cause_Code<=9999, "Performance", "Unknown"))))))))))))
 ```
 My next step is to create dummy numeric variables for each System type. This should allow me to begin using additional statistical methods.
+I used the following code to assign numeric variables to per above.
 
+```{r echo=FALSE}
+# Create binary numeric variables for System categories
+
+ff_steam_dfb <- ff_steam_dfb %>% 
+  mutate(BlrNum = as.numeric((System == "Boiler")),
+         BoPNum = as.numeric((System == "Balance_of_Plant")),
+         ElecNum = as.numeric((System == "Electrical")),
+         STNum = as.numeric((System == "Steam_Turbine")),
+         GenNum = as.numeric((System == "Generator")),
+         PCENum = as.numeric((System == "PCE")),
+         RegNum = as.numeric((System == "Regulatory")),
+         PersNum = as.numeric((System == "Personnel")),
+         InactNum = as.numeric((System == "Inactive")),
+         PerfNum = as.numeric((System == "Performance")))
+
+cc_dfb <- cc_dfb %>% 
+  mutate(HRSGNum = as.numeric((System == "HRSG")),
+         BoPNum = as.numeric((System == "Balance_of_Plant")),
+         ElecNum = as.numeric((System == "Electrical")),
+         STNum = as.numeric((System == "Steam_Turbine")),
+         GenNum = as.numeric((System == "Generator")),
+         GTNum = as.numeric((System == "Gas_Turbine")),
+         JENum = as.numeric((System == "Jet_Engine")),
+         MiscNum = as.numeric((System == "Miscellaneous")),
+         ETNum = as.numeric((System == "Expander_Turbine")),
+         PCENum = as.numeric((System == "PCE")),
+         RegNum = as.numeric((System == "Regulatory")),
+         PersNum = as.numeric((System == "Personnel")),
+         InactNum = as.numeric((System == "Inactive")),
+         PerfNum = as.numeric((System == "Performance")))
+```
+I examinded the following distribution plots in order to set probable maximal loss (PML) at > 10 days, 240 hours, and <= 30 days, 720 hours, as well as maximum forseeable loss (MFL) at greater that 30 days.
+
+```{r echo=FALSE}
+# Create probable maximal loss (PML): 10 days < Time_To_Repair <= 30 days
+# Create maximum forseeable loss (MFL): Time_To_Repair > 30 days
+
+ff_steam_dfb <- ff_steam_dfb %>% 
+  mutate(PML = 
+           if_else(Time_To_Repair > 240 & Time_To_Repair <= 720, "1", "0")) %>% 
+  mutate(MFL = 
+           if_else(Time_To_Repair > 720, "1", "0"))
+
+cc_dfb <- cc_dfb %>% 
+  mutate(PML = 
+           if_else(Time_To_Repair > 240 & Time_To_Repair <= 720, "1", "0")) %>% 
+  mutate(MFL = 
+           if_else(Time_To_Repair > 720, "1", "0"))
+```
+
+I used the following code to experiment with logistic regression for predicting (or showing an association wit) PML events by System.
+
+```{r echo=FALSE}
+# Experimenting with logistic regression to determine which systems determine,
+# or are associated with PML and MFL.
+ff_steam_dfb <- ff_steam_dfb %>% 
+  mutate(PML = factor(PML, levels = c("0","1"))) %>% 
+  mutate(MFL = factor(MFL, levels = c("0","1")))
+
+PML_mod_ffs <- glm(PML ~ BlrNum + BoPNum + ElecNum + STNum + GenNum + 
+                     PCENum + RegNum + PersNum + InactNum + PerfNum, 
+                   data = ff_steam_dfb, family = "binomial")
+
+# Remove NA Variables
+PML_mod_ffs2 <- glm(PML ~ BlrNum + BoPNum + ElecNum + STNum + GenNum + 
+                     PersNum + PerfNum, data = ff_steam_dfb, family = "binomial")
+
+# Remove PersNum
+PML_mod_ffs3 <- glm(PML ~ BlrNum + BoPNum + ElecNum + STNum + GenNum + 
+                      PerfNum, data = ff_steam_dfb, family = "binomial")
+
+# Remove Elecnum
+PML_mod_ffs4 <- glm(PML ~ BlrNum + BoPNum + STNum + GenNum + 
+                      PerfNum, data = ff_steam_dfb, family = "binomial")
+
+
+cc_dfb <- cc_dfb %>% 
+  mutate(PML = factor(PML, levels = c("0","1"))) %>% 
+  mutate(MFL = factor(MFL, levels = c("0","1")))
+
+PML_mod_cc <- glm(PML ~ HRSGNum + BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                     JENum + MiscNum + ETNum + PCENum + RegNum + PersNum + 
+                    InactNum + PerfNum, data = cc_dfb, family = "binomial")
+
+# Remove NA Variables
+PML_mod_cc2 <- glm(PML ~ HRSGNum + BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                    JENum + PersNum + PerfNum, data = cc_dfb, family = "binomial")
+
+# Remove HRSGNum
+PML_mod_cc3 <- glm(PML ~ BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                     JENum + PersNum + PerfNum, data = cc_dfb, family = "binomial")
+
+# Remove PersNum
+PML_mod_cc4 <- glm(PML ~ BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                     JENum + PerfNum, data = cc_dfb, family = "binomial")
+```
+Experimenting with logistic regression for MFL
+```{r echo=FALSE}
+#MFL Fossil Fuel Steam Turbine
+MFL_mod_ffs <- glm(MFL ~ BlrNum + BoPNum + ElecNum + STNum + GenNum + 
+                     PCENum + RegNum + PersNum + InactNum + PerfNum, 
+                   data = ff_steam_dfb, family = "binomial")
+
+# Remove NA Variables: PCENum, REGNum, and InactNum
+MFL_mod_ffs2 <- glm(MFL ~ BlrNum + BoPNum + ElecNum + STNum + GenNum + 
+                     PersNum + PerfNum,data = ff_steam_dfb, family = "binomial")
+
+# Remove STNum
+MFL_mod_ffs3 <- glm(MFL ~ BlrNum + BoPNum + ElecNum + GenNum + 
+                      PersNum + PerfNum,data = ff_steam_dfb, family = "binomial")
+
+# Remove BOPNum, checking for multiple colinearity
+MFL_mod_ffs4 <- glm(MFL ~ BlrNum + ElecNum + GenNum + 
+                      PersNum + PerfNum,data = ff_steam_dfb, family = "binomial")
+
+
+# MFL Combined Cycle (cc)
+MFL_mod_cc <- glm(PML ~ HRSGNum + BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                    JENum + MiscNum + ETNum + PCENum + RegNum + PersNum + 
+                    InactNum + PerfNum, data = cc_dfb, family = "binomial")
+
+# Remove NA Variables: MiscNum, ETNum, PCENum, RegNum, InactNum
+MFL_mod_cc2 <- glm(PML ~ HRSGNum + BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                    JENum + PersNum + PerfNum, data = cc_dfb, family = "binomial")
+
+# Remove HRSGNum, highest Pr(>|z|)
+MFL_mod_cc3 <- glm(PML ~ BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                     JENum + PersNum + PerfNum, data = cc_dfb, family = "binomial")
+
+# Remove PersGNum, next highest Pr(>|z|)
+MFL_mod_cc4 <- glm(PML ~ BoPNum + ElecNum + STNum + GenNum + GTNum +  
+                     JENum + PerfNum, data = cc_dfb, family = "binomial")
+```
 
