--- a/PP_Capstone.Rmd
+++ b/PP_Capstone.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "PP_Capstone_Proposal"
 Author: "Stephen Patti"
-Date:   "2018-08-13"
+Date:   "2018-09-06"
 output:
   md_document:
     variant: markdown_github
@@ -120,42 +120,6 @@ s_cycle_worka <- s_cycle_work %>%
          TBF_Service_Hrs, IA_SH, X_Derate)
 ```
 
-I created data frames converting the Cause_Codes to character fields in the event I wanted to do a join with the NERC GADS appendix codes.
-
-```{r ff_steam_exp, c_cycle_exp, s_cycle_exp, echo=FALSE}
-
-#convert Cause_Code iteger field to 4 character string/character field
-
-ff_steam_exp <- ff_steam_worka
-
-ff_steam_exp <- ff_steam_exp %>%
-  mutate(Cause_Code = as.character(Cause_Code)) %>%
-  mutate(Cause_Code = if_else(nchar(Cause_Code) == 2, paste0("00", Cause_Code),
-                              if_else(nchar(Cause_Code) == 3, paste0("0", Cause_Code),
-                                      if_else(nchar(Cause_Code) == 1, paste0("000", Cause_Code), Cause_Code))))
-
-write.csv(ff_steam_exp, file = "ff_steam_expt.csv")
-
-c_cycle_exp <- c_cycle_worka
-
-c_cycle_exp <- c_cycle_exp %>%
-  mutate(Cause_Code = as.character(Cause_Code)) %>%
-  mutate(Cause_Code = if_else(nchar(Cause_Code) == 2, paste0("00", Cause_Code),
-                              if_else(nchar(Cause_Code) == 3, paste0("0", Cause_Code),
-                                      if_else(nchar(Cause_Code) == 1, paste0("000", Cause_Code), Cause_Code))))
-
-write.csv(c_cycle_exp, file = "c_cycle_expt.csv")
-
-s_cycle_expx <- s_cycle_worka
-
-s_cycle_exp <- s_cycle_expx %>%
-  mutate(Cause_Code = as.character(Cause_Code)) %>%
-  mutate(Cause_Code = if_else(nchar(Cause_Code) == 2, paste0("00", Cause_Code),
-                              if_else(nchar(Cause_Code) == 3, paste0("0", Cause_Code),
-                                      if_else(nchar(Cause_Code) == 1, paste0("000", Cause_Code), Cause_Code))))
-write.csv(s_cycle_exp, file = "s_cycle_expt.csv")
-```
-
 Since I am focusing on unplanned outages, I used the following to filter each data set (fossil fuel steam shown as an example) to include only unplanned derates: D1, D2, D3, start up failures: SF, and unplanned full outages: U1, U2, U3.
 
 ```{r ff_steam_df, cc_df, ss_df, echo=FALSE}
@@ -186,16 +150,37 @@ ff_steam_df %>% group_by(Type) %>%
 cc_df %>% group_by(Type) %>%
   summarise(Mean_TTR_Type_cc = mean(Time_To_Repair, na.rm = TRUE)) %>%
   arrange(desc(Mean_TTR_Type_cc))
-
-ss_df %>% group_by(Type) %>%
-  summarise(Mean_TTR_Type_ss = mean(Time_To_Repair, na.rm = TRUE)) %>%
-  arrange(desc(Mean_TTR_Type_ss))
-
          
 #I created box-plot graphs by type, in which the x axis was outage type, Type, and
 #the y axis was time to repair, Time_To_Repair, for each data frame.  I also created
 #stat summary graphs, x axis was year, y axis was type, and faceted by outage type.
 #Both show distributions with long right tails and high range outliers.
+
+# Create a Box Plot graph, x = Type, y = Time_To_Repair
+ggplot(data = ff_steam_df, mapping = aes(x = Type, y = Time_To_Repair)) +
+  geom_boxplot()
+
+ggplot(data = cc_df, mapping = aes(x = Type, y = Time_To_Repair)) +
+  geom_boxplot()
+
+# create a stat summary plot, x = year(start_st), y = time to repair
+ggplot(data = ff_steam_df) +
+  stat_summary(
+    mapping = aes(x = year(start_dt), y = Time_To_Repair),
+    fun.ymin = min,
+    fun.ymax = max,
+    fun.y = mean
+  ) +
+  facet_wrap(~ Type, nrow = 2)
+
+ggplot(data = cc_df) +
+  stat_summary(
+    mapping = aes(x = year(start_dt), y = Time_To_Repair),
+    fun.ymin = min,
+    fun.ymax = max,
+    fun.y = mean
+  ) +
+  facet_wrap(~ Type, nrow = 2)
 
 ff_box_Ty_TTR
 ff_stat_sum
@@ -203,10 +188,7 @@ ff_stat_sum
 cc_box_Ty_TTR
 cc_stat_sum
 
-ss_box_Ty_TTR
-ss_stat_sum
 ```
-
 Given that there are hudreds of cause codes, Cause_Code, for each type of power plant, I grouped them by plant system, System, base on the NERC GADS appendix files.
 
 ```{r ff_steam_dfb, cc_dfb, ss_dfb, echo=FALSE}
@@ -251,21 +233,6 @@ cc_dfb <- cc_dfb %>%
            if_else(Cause_Code>=9900 & Cause_Code<=9960, "Personnel",
            if_else((Cause_Code>=9990 & Cause_Code<=9991 | Cause_Code==2), "Inactive", "Performance")))))))))))))))
 
-ss_dfb <- ss_df
-ss_dfb <- ss_dfb %>% 
-  mutate(Cause_Code = as.numeric(Cause_Code)) %>% 
-  mutate(System =
-           if_else(Cause_Code>=3600 & Cause_Code<=3730, "Electrical",
-           if_else(Cause_Code>=3810 & Cause_Code<=3999, "Balance_of_Plant",
-           if_else(Cause_Code>=4500 & Cause_Code<=4899, "Generator",
-           if_else(Cause_Code>=5000 & Cause_Code<=5299, "Gas_Turbine",
-           if_else(Cause_Code>=7800 & Cause_Code<=7960, "Expander_Turbine",
-           if_else(Cause_Code>=8656 & Cause_Code<=8845, "PCE",
-           if_else((Cause_Code>=9000 & Cause_Code<=9340 | Cause_Code==0), "External",
-           if_else(Cause_Code>=9504 & Cause_Code<=9720, "Regulatory",
-           if_else(Cause_Code>=9900 & Cause_Code<=9960, "Personnel",
-           if_else((Cause_Code>=9990 & Cause_Code<=9991 | Cause_Code==2), "Inactive",
-           if_else(Cause_Code>=9997 & Cause_Code<=9999, "Performance", "Unknown"))))))))))))
 ```
 My next step is to create dummy numeric variables for each System type. This should allow me to begin using additional statistical methods.
 I used the following code to assign numeric variables to per above.
@@ -302,6 +269,23 @@ cc_dfb <- cc_dfb %>%
          PerfNum = as.numeric((System == "Performance")))
 ```
 I examinded the following distribution plots in order to set probable maximal loss (PML) at > 10 days, 240 hours, and <= 30 days, 720 hours, as well as maximum forseeable loss (MFL) at greater that 30 days.
+
+```{r echo = FALSE}
+ggplot(data = ff_steam_dfb, aes(x = Time_To_Repair)) +
+         geom_density()
+       
+ggplot(data = ff_steam_dfb, aes(x = Time_To_Repair, color = Type)) +
+  geom_density() +
+  facet_grid(System ~ .)
+
+
+ggplot(data = cc_dfb, aes(x = Time_To_Repair)) +           
+  geom_density()
+
+ggplot(data = cc_dfb, aes(x = Time_To_Repair, color = Type)) + 
+  geom_density() +
+  facet_grid(System ~ .)
+```
 
 ```{r echo=FALSE}
 # Create probable maximal loss (PML): 10 days < Time_To_Repair <= 30 days
